# sap-enterprise-ops-env

./: .gitignore  Dockerfile  README.md  baseline_results.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
client/: client.py
models/: action.py  observation.py  state.py
server/: app.py  cascade.py  data.py  environment.py  reward.py  tasks.py
tests/: test_environment.py  test_graders.py
