[project]
name = "sap-enterprise-ops-env"
version = "1.0.0"
description = "OpenEnv RL environment for SAP Basis incident resolution"
authors = [
    { name = "Rajeev Lokesh", email = "pathipatirajeevlokesh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.135.0",
    "uvicorn>=0.42.0",
    "pydantic>=2.12.0",
    "huggingface_hub>=1.8.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Rajeevlokesh/sap-enterprise-ops-env"
Repository = "https://github.com/Pathipatirajeevlokesh/sap-enterprise-ops-env"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "models", "client"]

[project.scripts]
server = "server.app:main"